--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+dotenv = "0.15.0"
 rocket = "0.5.0"
+diesel = { version = "2.1.0", features = ["postgres"] }
